frontend/src/index.css
* {
  margin: 0;
  padding: 0;
}
:root {
  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
  line-height: 1.5;
  font-weight: 400;

  color-scheme: light dark;
  color: rgba(255, 255, 255, 0.87);
  background-color: #2f2d48;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;

  --dark-blue: hsl(216, 43%, 7%);
  --cover-blue: hsl(218, 45%, 10%);
  --action-orange: hsl(29, 100%, 56%);
  --cube: cubic-bezier(0.42, 0, 0.44, 1.68);
}
#root {
  width: 100%;
}
body {
  margin: 0;
  display: flex;
  place-items: center;
  min-width: 320px;
  min-height: 100svh;
}
.main {
  display: flex;
  flex-direction: column;
  justify-content: center;
  min-height: 100svh;
  min-width: 100%;
}

h1 {
  font-size: 3.2em;
  line-height: 1.1;
}
h3 {
  color: rgba(255, 255, 255, 0.87);
}

a {
  text-decoration: none;
}

@media (prefers-color-scheme: light) {
  :root {
    color: #e9e5d8;
    background-color: #ffffff;
  }
}
header {
  position: fixed;
  display: flex;
  align-items: center;
  width: 100%;
  min-height: 7vh;
  top: 0;
  left: 0;
  background: var(--dark-blue);
  z-index: 2;
}
nav {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  width: 100%;
  margin: auto;
  padding: 0 3em;
}
nav img {
  transition: 300ms ease-in-out;
  cursor: pointer;
}

nav img:hover {
  transform: scale(1.05);
}

.navbar-links {
  list-style-type: none;
  display: flex;
  flex-direction: row;
  gap: 0.7em;
}

.navbar-actions {
  display: flex;
  align-items: center;
  flex-direction: row;
  gap: 1em;
}

.navbar-actions .cart-icon {
  position: relative;
}
.navbar-actions .cart-icon span {
  color: #fff;
  background-color: #172b4d;
  padding: 0.2em;
  border-radius: 50%;
  position: absolute;
  top: -70%;
  right: 0;
}

.navbar-actions button {
  border: none;
  background-color: transparent;
  cursor: pointer;
}

.sidenav {
  min-width: 150px;
  height: 100svh;
  position: fixed;
  top: 0;
  left: -50vh;
  display: flex;
  flex-direction: column;
  gap: 2em;
  padding: 8vh 1em;
  z-index: 1;
  background-color: hsla(216, 43%, 5%, 0.99);
  backdrop-filter: blur(8px);
  transition: 300ms ease-in;
}

.sidenav.active {
  left: 0;
}

.sidenav ul {
  width: 100%;
  display: flex;
  flex-direction: column;
  list-style-type: none;
  gap: 1em;
}

.sidenav ul button {
  display: block;
  padding: 0.5em 0.7em;
  border-radius: 6px;
  background-color: transparent;
  border: none;
  font-size: 1em;
  color: #e9e5d8;
  text-decoration: none;
  text-transform: capitalize;
  transition: 200ms ease;
  cursor: pointer;
}

.sidenav ul button:hover,
.sidenav ul button.active {
  background-color: #172b4d;
}

.sidenav .clear-btn {
  border: none;
  border-radius: 6px;
  padding: 0.5em 0.7em;
  color: var(--dark-blue);
  font-size: 1.1em;
  background-color: var(--action-orange);
  transition: 200ms var(--cube);
  cursor: pointer;
}
.sidenav .clear-btn:hover {
  transform: scale(1.04) translateY(-2px);
}

.filters-con {
  width: 100%;
  margin-top: 10vh;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.filters-con ul {
  display: flex;
  flex-direction: row;
  list-style-type: none;
  gap: 1em;
}
.filters-con button {
  text-transform: capitalize;
  font-size: 1em;
  border: none;
  border-radius: 6px;
  padding: 0.5em 0.7em;
  background-color: var(--cover-blue);
  cursor: pointer;
  transition:
    transform 150ms var(--cube),
    color 150ms ease;
}
.filters-con button:hover {
  transform: scale(1.02);
}

.filters-con button.active {
  transform: scale(1.02);
  background-color: var(--action-orange);
  color: var(--dark-blue);
  font-weight: 600;
}

.filters-con .clear-btn {
  font-size: 0.9em;
  border: none;
  background-color: transparent;
}

.product-grid {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr auto;
  gap: 1em;

  color: #213547;
  margin: 10vh 5vh;
}

.product-card {
  max-width: 300px;
  border-radius: 22px;
  padding: 0.7em;
  background-color: var(--dark-blue);
  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  gap: 1em;
}
.product-image {
  position: relative;
  border-radius: 18px;
  background-color: var(--cover-blue);
  justify-self: flex-start;
  padding: 2em 1.2em 0.75em 1.2em;
  text-align: center;
}

.product-image .favorite-icon {
  position: absolute;
  top: 10px;
  right: 10px;
  cursor: pointer;
  transition: 150ms ease;
}
.product-image .favorite-icon:hover {
  filter: invert(59%) sepia(88%) saturate(2165%) hue-rotate(352deg)
    brightness(101%) contrast(103%);
}

.product-details {
  display: flex;
  flex-direction: column;
  gap: 1em;
  padding: 0.25em;
}

.product-details .upper-part {
  display: flex;
  flex-direction: column;
  justify-items: flex-start;
  gap: 0.5em;
}

.product-details .upper-part h3 {
  overflow: hidden;
  text-overflow: ellipsis;
  display: -webkit-box;
  line-clamp: 2;
  -webkit-line-clamp: 2;
  -webkit-box-orient: vertical;
}

.product-details .category {
  font-size: 0.7em;
  font-weight: 600;
  color: var(--action-orange);
  align-self: flex-start;
  padding: 0.2em 0.7em;
  background-color: hsla(29, 100%, 56%, 0.1);
  border-radius: 25px;
}

.lower-part {
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
  gap: 1.2em;
}
.lower-part .qty-value {
  color: #fff;
  font-size: 1.2em;
}
.lower-part .price {
  font-size: 1.25em;
  color: rgba(255, 255, 255, 0.87);
}

.lower-part .quantity-control {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
}
.add-to-cart {
  display: flex;
  flex-direction: column;
  justify-items: flex-end;
  align-items: flex-end;
}

.qty-btn {
  min-width: 50px;
  font-weight: 500;
  font-size: 2em;
  color: var(--dark-blue);
  border-radius: 12px;
  border: none;
  background-color: #fff;
  display: flex;
  align-items: center;
  justify-items: center;
  padding: 0.2em 0.5em;
  cursor: pointer;
}

/* CART PAGE*/

.cart-page {
  display: flex;
  flex-direction: column;
  padding: 1em 2em;
  gap: 2em;
  min-height: 100svh;
}

.cart-page.empty {
  justify-content: center;
}

.cart-page.empty .empty-cart {
  display: flex;
  flex-direction: column;
  justify-self: flex-start;
  gap: 2em;
}

.breadcrumbs {
  display: flex;
  align-items: center;
  gap: 0.5em;
}
.breadcrumbs-link {
  cursor: pointer;
}

.cart-content {
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
}

.cart-items {
  display: flex;
  flex-direction: column;
  gap: 1em;
  width: 55%;
}

.cart-items .item {
  display: flex;
  background-color: hsl(216, 43%, 10%);
  border-radius: 14px;
  padding: 1em;
  position: relative;
}
.cart-items .item .item-inner {
  display: flex;
  flex-direction: row;
  align-items: center;
  gap: 2em;
}

.cart-items .img-wrapper {
  padding: 0.5em 0.7em;
  background-color: hsl(218, 45%, 15%);
  border-radius: 16px;
}

.cart-items .item-content {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  width: 100%;
}

.cart-items .delete-cart {
  position: absolute;
  top: 10px;
  right: 10px;
  cursor: pointer;
}

.cart-items .item-title {
  max-width: 90%;
}

.cart-items .item-price {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  width: 100%;
}
.cart-items .item-price h2 {
  font-weight: 400;
}

.cart-items .cart-quantity {
  position: absolute;
  bottom: 20px;
  right: 10px;
  display: flex;
  align-items: center;
  gap: 1em;
}

.cart-items .cart-quantity img {
  cursor: pointer;
}

.cart-summary {
  display: flex;
  flex-direction: column;
  width: 35%;
}

.summary-inner {
  display: flex;
  flex-direction: column;
  gap: 1em;
  padding: 1em 1.5em;
  background-color: hsl(216, 43%, 10%);
  border-radius: 14px;
}

.summary-inner .sums {
  display: flex;
  flex-direction: column;
  gap: 0.5em;
  padding: 0.7em 0;
}
.summary-inner .sums div {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}

.summary-inner .sums div p:first-child {
  color: rgba(255, 255, 255, 0.7);
}
.summary-inner .sums div p:last-child {
  font-weight: 600;
}

.summary-inner .total {
  border-top: 1px solid rgba(255, 255, 255, 0.5);
  padding: 1em 0;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  font-weight: 600;
  font-size: 1.2em;
}

.action-btn {
  border: none;
  background-color: var(--action-orange);
  padding: 0.7em 0.5em;
  color: var(--dark-blue);
  font-weight: 600;
  font-size: 1.1em;
  border-radius: 12px;
  transition: 200ms var(--cube);
  cursor: pointer;
}
.action-btn.disabled {
  background-color: hsl(29, 100%, 36%);
}

.action-btn:not(.disabled):hover {
  transform: scale(1.01);
}

.summary-inner .terms {
  display: flex;
  flex-direction: row;
  gap: 1em;
  align-self: flex-end;
  & label {
    cursor: pointer;
  }
}

/* MISC */

.error-con {
  width: 50%;
  height: 35svh;
  display: flex;
  flex-direction: column;
  align-self: center;
  align-items: center;
  justify-content: center;
  gap: 2em;
  padding: 2em;
  background: rgba(0, 0, 0, 0.2);
  border-radius: 12px;
}

.error-con p {
  font-size: 2em;
  font-weight: 600;
}

.error-con button {
  font-size: 1em;
  color: #172b4d;
  font-weight: 600;
  padding: 1em 1.2em;
  border-radius: 8px;
  background: var(--action-orange);
  border: none;
  cursor: pointer;
  transition: 200ms ease;
}

.error-con button:hover {
  transform: scale(0.99);
}

.loader-container {
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 2rem;
  margin-top: 15vh;
}

.spinner {
  width: 40px;
  height: 40px;
  border: 4px solid #e0e0e0;
  border-top: 4px solid var(--cover-blue);
  border-radius: 50%;
  animation: spin 1s linear infinite;
}

@keyframes spin {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(360deg);
  }
}

@media screen and (max-width: 767px) {
  .cart-page {
    padding: 1em;
  }
  .cart-content {
    flex-direction: column;
    gap: 2em;
  }

  .cart-items {
    width: 100%;
  }

  .cart-summary {
    width: 100%;
  }

  .img-wrapper {
    width: fit-content;
    height: fit-content;
  }

  .cart-items .item-price {
    margin-top: 1em;
    gap: 1em;
    flex-direction: column;
  }

  .cart-items .item-price h2 {
    align-self: flex-start;
  }

  .cart-items .cart-quantity {
    position: static;
  }
}

